--- a/accounts/.gitignore
+++ b/accounts/.gitignore
@@ -128,11 +128,14 @@ dmypy.json
 # Pyre type checker
 .pyre/
 /.idea/
+/backend/static/admin/
+/backend/radio/migrations/
 /backend/accounts/migrations/
 /django-accounts/accounts/migrations/
+/backend/static/
 /.static_root/
 /backend/.static/
 /volumes/
 
-/apoweroftrance-525255671db2.json
-/django-accounts/.static/
+/.static/
+/accounts/migrations/
