--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - -c
       - |
         python3 -m pip install -r requirement.txt
-        while ! nc 10.0.0.6 8090; do
+        while ! nc 10.0.0.5 8090; do
           >&2 echo "Wait backend service - sleeping"
           sleep 1
         done
@@ -54,49 +54,46 @@ services:
   nginx:
     container_name: nginx
     restart: always
-#    image: nginxinc/nginx-unprivileged:latest
-    image: gcr.io/apoweroftrance/nginx:latest
+    image: nginxinc/nginx-unprivileged:latest
+#    image: gcr.io/apoweroftrance/nginx:latest
 #    build: nginx
     ports:
       - "8080:8080"
-      - "8081:8081"
     # https://yeti.tistory.com/218
     volumes:
-      - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/config/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/config/useragent.rules:/etc/nginx/useragent.rules
-      - ./nginx/config/cors:/etc/nginx/cors
-      - ./nginx/config/whitelist.conf:/etc/nginx/whitelist.conf
-      - ./nginx/config/uwsgi_params:/etc/nginx/uwsgi_params
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/useragent.rules:/etc/nginx/useragent.rules
+      - ./nginx/cors:/etc/nginx/cors
+      - ./nginx/whitelist.conf:/etc/nginx/whitelist.conf
+      - ./nginx/uwsgi_params:/etc/nginx/uwsgi_params
     networks:
       apoweroftrance:
         ipv4_address: 10.0.0.4
     depends_on:
-      - accounts
       - radio
     links:
-      - accounts
       - radio
 
-  accounts:
-    container_name: accounts
+  radio:
+    container_name: radio
     restart: always
-    image: gcr.io/apoweroftrance/accounts:latest
-#    build: accounts
+    image: gcr.io/apoweroftrance/radio:latest
+#    build: radio
     environment:
       STAGE: dev
-      SECRET_KEY: J3i78k1Ov9DzT8zLkfh8TNASofnTnqCOuiG5TG3OrGLM5m6yvD
+      SECRET_KEY: ucKAsoQml9WVaHaLu00zDqno7LpgV6QPU3zv8FiryvKkkk90HB
       AES_KEY: BYOUwqYyMgWfEIjSHhmVHBoJgobVUJbR
       AES_SECRET: I6V8HN5DMUPM4AES
       EMAIL_HOST_USER: apoweroftrance@gmail.com
       EMAIL_HOST_PASSWORD: "\"!Triace07\""
-      DB_NAME: user
-      DB_HOST: 10.0.0.8
+      DB_NAME: apoweroftrance
+      DB_HOST: 10.0.0.7
       DB_USERNAME: whiteblue3
       DB_PASSWORD: ?!Triace07
       DB_PORT: 5432
-      NGINX: 10.0.0.4:8081
-      REDIS_URL: 10.0.0.7
+      NGINX: 10.0.0.4:8080
+      REDIS_URL: 10.0.0.6
       REDIS_PORT: 6379
       REDIS_DB: 0
     depends_on:
@@ -111,69 +108,19 @@ services:
       - |
         python3 -m pip install -r requirement.txt
         python3 manage.py collectstatic --noinput -i yes
-        python3 manage.py makemigrations
+        python3 manage.py makemigrations accounts
+        python3 manage.py makemigrations radio
         python3 manage.py migrate
-        while ! nc 10.0.0.8 5432; do
+        while ! nc 10.0.0.7 5432; do
           >&2 echo "Wait database service - sleeping"
           sleep 1
         done
         uwsgi --show-config
     ports:
-      - "8091:8091"
-    networks:
-      apoweroftrance:
-        ipv4_address: 10.0.0.5
-    volumes:
-      - account_data:/backend
-      - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
-
-
-  radio:
-    container_name: radio
-    restart: always
-#    image: gcr.io/apoweroftrance/radio:latest
-    build: backend
-    environment:
-      STAGE: dev
-      SECRET_KEY: ucKAsoQml9WVaHaLu00zDqno7LpgV6QPU3zv8FiryvKkkk90HB
-      DB_USER_NAME: user
-      DB_USER_HOST: 10.0.0.8
-      DB_USER_USERNAME: whiteblue3
-      DB_USER_PASSWORD: ?!Triace07
-      DB_USER_PORT: 5432
-      DB_NAME: radio
-      DB_HOST: 10.0.0.8
-      DB_USERNAME: whiteblue3
-      DB_PASSWORD: ?!Triace07
-      DB_PORT: 5432
-      NGINX: 10.0.0.4:8080
-      REDIS_URL: 10.0.0.7
-      REDIS_PORT: 6379
-      REDIS_DB: 0
-    depends_on:
-      - redis
-      - db
-    links:
-      - redis
-      - db
-    command:
-      - /bin/bash
-      - -c
-      - |
-        python3 -m pip install -r requirement.txt
-        python3 manage.py collectstatic --noinput -i yes
-        while ! nc 10.0.0.5 8091; do
-          >&2 echo "Wait accounts service - sleeping"
-          sleep 1
-        done
-        python3 manage.py makemigrations
-        python3 manage.py migrate
-        uwsgi --show-config
-    ports:
       - "8090:8090"
     networks:
       apoweroftrance:
-        ipv4_address: 10.0.0.6
+        ipv4_address: 10.0.0.5
     volumes:
       - radio_data:/backend
       - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
@@ -193,7 +140,7 @@ services:
       - "6379:6379"
     networks:
       apoweroftrance:
-        ipv4_address: 10.0.0.7
+        ipv4_address: 10.0.0.6
 
   db:
     container_name: db
@@ -201,7 +148,7 @@ services:
     environment:
       POSTGRES_USER: whiteblue3
       POSTGRES_PASSWORD: ?!Triace07
-      POSTGRES_MULTIPLE_DB: radio,user
+      POSTGRES_DB: apoweroftrance
       PGDATA: /var/postgres_data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
@@ -212,9 +159,9 @@ services:
       - "5432:5432"
     networks:
       apoweroftrance:
-        ipv4_address: 10.0.0.8
+        ipv4_address: 10.0.0.7
     volumes:
-      - ./initialize_postgresql_multiple_databases.sh:/docker-entrypoint-initdb.d/initialize_postgresql_multiple_databases.sh
+#      - ./initialize_postgresql_multiple_databases.sh:/docker-entrypoint-initdb.d/initialize_postgresql_multiple_databases.sh
       - pgdata:/var/postgres_data
 
 
@@ -223,11 +170,6 @@ volumes:
     driver_opts:
       type: none
       device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radio/backend #NOTE needs full path (~ doesn't work)
-      o: bind
-  account_data:
-    driver_opts:
-      type: none
-      device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radio/accounts #NOTE needs full path (~ doesn't work)
       o: bind
   musicdaemon_data:
     driver_opts:
