--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -44,8 +44,10 @@ server {
 
         #try_files $uri $uri/ /404.html;
 
-        proxy_set_header X-FORWARDED-FOR $remote_addr;
-        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
 
         include /etc/nginx/uwsgi_params;
 
