--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "radio"]
 	path = radio
 	url = https://github.com/whiteblue3/apoweroftrance-radio.git
+[submodule "upload"]
+	path = upload
+	url = https://github.com/whiteblue3/apoweroftrance-upload.git
 [submodule "musicdaemon"]
 	path = musicdaemon
 	url = https://github.com/whiteblue3/apoweroftrance-musicdaemon.git
