--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - musicdaemon_data:/opt/musicdaemon
       - ./config.ini:/opt/musicdaemon/config.ini
       - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
-#      - ./volumes:/srv/media:ro
+#      - ./volumes:/mnt:ro
 
   db:
     container_name: db
@@ -95,6 +95,7 @@ services:
     ports:
       - "8080:8080"
       - "8081:8081"
+      - "8082:8082"
     # https://yeti.tistory.com/218
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -121,7 +122,6 @@ services:
 #    build: radio
     environment:
       ENABLE_SWAGGER: 1
-      ENABLE_EMAIL_SEND: 1
       DB_NAME: apoweroftrance
       DB_HOST: 10.0.0.4
       DB_USERNAME: whiteblue3
@@ -161,7 +161,6 @@ services:
 #    build: account
     environment:
       ENABLE_SWAGGER: 1
-      ENABLE_EMAIL_SEND: 1
       DB_NAME: apoweroftrance
       DB_HOST: 10.0.0.4
       DB_USERNAME: whiteblue3
@@ -193,6 +192,47 @@ services:
       - ./account_secret.json:/backend/secret.json
       - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
 
+  upload:
+    container_name: upload
+    restart: always
+    image: gcr.io/apoweroftrance/upload:dev-pod
+#    image: gcr.io/apoweroftrance/upload:production-latest
+#    build: upload
+    environment:
+      ENABLE_SWAGGER: 1
+      ENABLE_EMAIL_SEND: 1
+      DB_NAME: apoweroftrance
+      DB_HOST: 10.0.0.4
+      DB_USERNAME: whiteblue3
+      DB_PASSWORD: ?!Triace07
+      DB_PORT: 5432
+      NGINX: 10.0.0.6:8082
+      REDIS_URL: 10.0.0.5
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+      WAIT_SERVICE: 1
+      WAIT_URL: 10.0.0.8
+      WAIT_PORT: 8091
+      INSTALL: 0
+      MIGRATE: 0
+      AUTOSTART: 1
+    depends_on:
+      - redis
+      - db
+    links:
+      - redis
+      - db
+    ports:
+      - "8092:8092"
+    networks:
+      apoweroftrance:
+        ipv4_address: 10.0.0.9
+    volumes:
+      - upload_data:/backend
+      - ./upload_secret.json:/backend/secret.json
+      - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
+
+
 volumes:
   account_data:
     driver_opts:
@@ -203,6 +243,11 @@ volumes:
     driver_opts:
       type: none
       device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radiosystem/radio #NOTE needs full path (~ doesn't work)
+      o: bind
+  upload_data:
+    driver_opts:
+      type: none
+      device: /Users/whiteblue3/Documents/dev/projects/apoweroftrance.com/source/radiosystem/upload #NOTE needs full path (~ doesn't work)
       o: bind
   musicdaemon_data:
     driver_opts:
