--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
       - "8080:8080"
       - "8081:8081"
       - "8082:8082"
+      - "8083:8083"
     # https://yeti.tistory.com/218
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -134,7 +135,7 @@ services:
       WAIT_SERVICE: 1
       WAIT_URL: 10.0.0.8
       WAIT_PORT: 8091
-      INSTALL: 0
+      INSTALL: 1
       MIGRATE: 0
       AUTOSTART: 1
     depends_on:
@@ -231,6 +232,44 @@ services:
       - upload_data:/backend
       - ./upload_secret.json:/backend/secret.json
       - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
+
+#  cms:
+#    container_name: cms
+#    restart: always
+#    image: gcr.io/apoweroftrance/cms:dev-pod
+##    image: gcr.io/apoweroftrance/cms:production-latest
+##    build: ../cms
+#    environment:
+#      DB_NAME: apoweroftrance
+#      DB_HOST: 10.0.0.4
+#      DB_USERNAME: whiteblue3
+#      DB_PASSWORD: ?!Triace07
+#      DB_PORT: 5432
+#      NGINX: 10.0.0.6:8082
+#      REDIS_URL: 10.0.0.5
+#      REDIS_PORT: 6379
+#      REDIS_DB: 0
+#      WAIT_SERVICE: 1
+#      WAIT_URL: 10.0.0.8
+#      WAIT_PORT: 8091
+#      INSTALL: 0
+#      MIGRATE: 0
+#      AUTOSTART: 1
+#    depends_on:
+#      - redis
+#      - db
+#    links:
+#      - redis
+#      - db
+#    ports:
+#      - "8093:8093"
+#    networks:
+#      apoweroftrance:
+#        ipv4_address: 10.0.0.10
+#    volumes:
+##      - upload_data:/backend
+#      - ./cms_secret.json:/backend/secret.json
+#      - ./apoweroftrance-525255671db2.json:/etc/gcloud/service-account-key.json
 
 
 volumes:
