fixed bugs: - cannot search tracks with keyword - cannot deploy to gcr.io

--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,8 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
-description = A Power of Trance - Trance Premium channel
-genre = Trance
+description = A Power of Trance - POP channel
+genre = POP
 bitrate = 320000
 samplerate = 44100
 url =
