add OPTIONS in nginx conf

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -42,7 +42,7 @@ server {
     client_max_body_size 50m;
 
     location / {
-        limit_except GET POST PUT PATCH DELETE {
+        limit_except GET POST PUT PATCH DELETE OPTIONS {
             deny all;
         }
         #include /etc/nginx/cors;
