add channel lena

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [daemon]
-musicdaemon = yui, alice, miku
+musicdaemon = yui, alice, miku, lena
 server = server
 
 [icecast2_yui]
@@ -24,8 +24,8 @@ user = source
 password = hackme
 codec = mp3
 name = A Power of Trance CH.ALICE
-description = A Power of Trance - POP channel
-genre = POP
+description = A Power of Trance - Electronika channel
+genre = Electronika
 bitrate = 320000
 samplerate = 44100
 url =
@@ -44,6 +44,20 @@ bitrate = 192000
 samplerate = 44100
 url =
 
+[icecast2_lena]
+host = 10.0.0.2
+port = 8000
+mount = lena
+user = source
+password = hackme
+codec = mp3
+name = A Power of Trance CH.LENA
+description = A Power of Trance - POP channel
+genre = POP
+bitrate = 320000
+samplerate = 44100
+url =
+
 [callback_yui]
 on_startup = http://10.0.0.6:8080/v1/radio/callback/on_startup/yui
 on_play = http://10.0.0.6:8080/v1/radio/callback/on_play/yui
@@ -55,6 +69,11 @@ on_play =
 on_stop =
 
 [callback_miku]
+on_startup =
+on_play =
+on_stop =
+
+[callback_lena]
 on_startup =
 on_play =
 on_stop =
@@ -73,3 +92,8 @@ key = alice
 host = 10.0.0.5
 port = 6379
 key = miku
+
+[redis_lena]
+host = 10.0.0.5
+port = 6379
+key = lena
