bug fixed : token string encoding issue

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -112,8 +112,10 @@ server {
 
     #include /etc/nginx/whitelist.conf;
 
+    client_max_body_size 10m;
+
     location / {
-        limit_except GET POST PUT PATCH DELETE {
+        limit_except GET POST PUT PATCH DELETE OPTIONS {
             deny all;
         }
         #include /etc/nginx/cors;
@@ -127,6 +129,18 @@ server {
         proxy_set_header REMOTE_ADDR $remote_addr;
 
         include /etc/nginx/uwsgi_params;
+
+        uwsgi_pass_request_body on;
+        uwsgi_pass_request_headers on;
+
+        #uwsgi_pass_request_body off;
+        #uwsgi_param CONTENT_LENGTH 0;
+
+        uwsgi_read_timeout 300;
+        uwsgi_send_timeout 300;
+        uwsgi_connect_timeout 300;
+
+        uwsgi_max_temp_file_size 10M;
 
         uwsgi_pass account;
     }
@@ -172,7 +186,7 @@ server {
     client_max_body_size 50m;
 
     location / {
-        limit_except GET POST PUT PATCH DELETE {
+        limit_except GET POST PUT PATCH DELETE OPTIONS {
             deny all;
         }
         #include /etc/nginx/cors;
@@ -245,7 +259,7 @@ server {
     client_max_body_size 50m;
 
     location / {
-        limit_except GET POST PUT PATCH DELETE {
+        limit_except GET POST PUT PATCH DELETE OPTIONS {
             deny all;
         }
         #include /etc/nginx/cors;
