add replact music and cover art api

--- a/config.ini
+++ b/config.ini
@@ -39,7 +39,7 @@ password = hackme
 codec = mp3
 name = A Power of Trance CH.MIKU
 description = A Power of Trance - Subculture channel
-genre = ANI, Game, Subculture
+genre = Subculture
 bitrate = 192000
 samplerate = 44100
 url =
